<resources>
    <string name="app_name">Elmedico</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_age_exceed">Enter Correct Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="error_message_password_length">Password should be atleast 6 characters long</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_member">Already a member? Login</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />


    <string name="search_doctors">Search Doctors</string>
    <string name="todo">TODO</string>
    <string name="view_prescription">View Prescription</string>
    <string name="searchhospitals">searchhospitals</string>
    <string name="prescriptions_Reports">Prescriptions/Reports</string>
    <string name="find_hospitals">Find Hospitals</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="find_doctors">Find Doctors</string>
    <string name="prescription">Prescription</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="login_preference">com.zi.elmedico_login_preference</string>
    <string name="login_preference_status">com.zi.elmedico_login_preference_status</string>
    <string name="button">Button</string>

    <string name="title_activity_list_data">ListDataActivity</string>
    <string name="PagePrescription">Prescription</string>
    <string name="hint_age">Age</string>
    <string name="age">Age</string>
    <string name="Cancel">Cancel</string>
    <string name="save">SAVE</string>
    <string name="edit_your_profile">EDIT YOUR PROFILE</string>
    <string name="your_profile">YOUR PROFILE</string>
    <string name="doctors_name">Doctors Name</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="hospitals_name">Hospitals Name</string>
    <string name="search_hospitals">Search Hospitals</string>
    <string name="textview2">TextView2</string>
    <string name="textview3">TextView3</string>
    <string name="textview1">TextView1</string>
    <string name="view_prescriptions_or_test_reports">View Prescriptions or Test Reports</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="test_reports">Test Reports</string>
    <string name="submit">Submit</string>
    <string name="reports">Reports</string>

</resources>
